변수와 자료형

--- a/study/필기장.md
+++ b/study/필기장.md
@@ -9,3 +9,17 @@
  System.out.println();
 
 
+#### 변수
+- double과 float 차이 (소수점은 자동으로 double자료형으로 인식)
+> double은 일반소수를 넣어 작성 가능
+ (ex) double d = 3.14;
+> float은 일반 소수 뒤에 F나 f 를 넣어 작성(들어가는 데이터양 적어)
+ (ex) float f = 3.14F;
+
+- int와 long 차이 (정수는 자동으로 int자료형으로 인식)
+> int는 일반정수를 넣어 작성 가능
+ (ex) int i = 123;
+> long은 일반 정수 뒤에 L 을 넣어 작성(abs(21억) 이상의 정수를 넣을 때)
+ (ex) long l = 123456789123L;
+
+>> 작은 범위 계산을 위해 큰 자료형을 쓰면 그만큼 공간 낭비, 큰 범위 계산을 해야되는데 작은 자료형을 쓰면 에러
