변수 이름 짓는 법

--- a/study/필기장.md
+++ b/study/필기장.md
@@ -27,3 +27,13 @@
  (ex) long l = 123456789123L;
 
 >> 작은 범위 계산을 위해 큰 자료형을 쓰면 그만큼 공간 낭비, 큰 범위 계산을 해야되는데 작은 자료형을 쓰면 에러
+
+#### 변수 이름 짓는 법
+1. 저장할 값에 어울리는 이름
+2. 밑줄(_), 문자(a, b, c), 숫자(1, 2, 3)
+    공백은 사용 불가!!!
+3. 밑줄 또는 문자로 시작 가능
+4. 한 단어 또는 2개 이상 단어의 연속
+5. 소문자로 시작, 각 단어의 시작 글자는 대문자 (첫 단어는 제외)
+6. 예약여 사용 불가 (public, static, void, int, double, float, ...)
+
