--- a/study/필기장.md
+++ b/study/필기장.md
@@ -37,3 +37,13 @@
 5. 소문자로 시작, 각 단어의 시작 글자는 대문자 (첫 단어는 제외)
 6. 예약여 사용 불가 (public, static, void, int, double, float, ...)
 
+#### 상수
+- 변수와 상수 작성 법
+> 변수
+
+String a = "a"
+> 상수
+
+final String A = "a"
+
+* 상수의 변수명은 전부 대문자로 작성
