--- a/study/필기장.md
+++ b/study/필기장.md
@@ -47,3 +47,24 @@ String a = "a"
 final String A = "a"
 
 * 상수의 변수명은 전부 대문자로 작성
+
+#### 형 변환
+- 정수형에서 실수형으로, 실수형에서 정수형으로
+> int -> long -> float -> double (자동 형변환)
+> 반대로는 직접 형 변환해야됨
+
+(ex) int i = int(98.8)
+- 숫자를 문자열로
+> String 클래스에서 valueOf()함수, Integer에서 toString, Double에서 toString 호출
+
+(ex1) String s1 = String.valueOf(93);
+
+(ex2) String s1 = Integer.toString(93);
+
+(ex3) String s1 = Double.toString(93.3);
+- 문자열을 숫자로
+> Integer에서 parseInt, double에서 parseDouble 호출
+
+(ex1) int i = Integer.parseInt("11");
+
+(ex2) double d = Double.parseDouble("98.8");
