--- a/study/필기장.md
+++ b/study/필기장.md
@@ -2,13 +2,13 @@
 #### 자동완성
 - psvm or main
 
- public static void main(String[] args) {
+> public static void main(String[] args) {
         
      }
 
 - sout
 
- System.out.println();
+> System.out.println();
 
 
 #### 변수
